# research-ready

./: ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  SPEC.md  STAGE2-PLAN.md  WISHLIST.md  main.py  observed_errors.md  pyproject.toml
.obsidian/: workspace.json
notes/: LEARNINGS.md  llm-verify-tip.md  rr-git-education-notes.md  rr-wishlist-review.md
src/rr/: cli.py  config.py  file.py  git.py  index.py  init.py  names.py  reindex.py  remove.py
tests/: conftest.py  test_cli.py  test_config.py  test_file.py  test_index.py  test_init.py  test_names.py  test_reindex.py  test_remove.py  test_tool_install.py  test_validate.py
